# ayed-autograder

./: .gitignore  README.md
demo-consigna-calculadora/: README.md  seed_demo.py
demo-consigna-calculadora/consigna/: casos_prueba.json  consigna.md
demo-consigna-calculadora/entregas/entrega_correcta/: main.c
demo-consigna-calculadora/entregas/entrega_error_compilacion/: main.c
demo-consigna-calculadora/entregas/entrega_error_logico/: main.c
docs/: bitacora_ppp.md
docs/decisions/: sandboxing.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: AdminView.tsx  FeedbackView.tsx  UploadForm.tsx
service/: .env.example  pyproject.toml  seed.py
service/app/: main.py
service/app/api/: admin.py  consignas.py  routes.py  submissions.py
service/app/core/: config.py
service/app/models/: database.py  models.py  schemas.py
service/app/services/: analyzer.py  compiler.py  pipeline.py  static_analyzer.py  test_runner.py  valgrind_parser.py  zip_validator.py
service/tests/: conftest.py
service/tests/functional/: test_api.py  test_submissions.py
service/tests/memory/: test_valgrind_parser.py
service/tests/performance/: test_performance.py
service/tests/property/: test_properties.py
service/tests/unit/: test_compiler.py  test_static_analyzer.py  test_test_runner.py  test_zip_validator.py
