[tool.poetry]
name = "corrector-automatico"
version = "0.1.0"
description = "Servicio de corrección automática de entregas de AED - UNLA"
authors = ["Gabriel"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.30.0"
python-multipart = "^0.0.9"
langchain = "^0.3.0"
langchain-openai = "^0.2.0"
openai = "^1.50.0"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.35"
psycopg2-binary = "^2.9.9"
pydantic = "^2.9.0"
pydantic-settings = "^2.5.0"
rarfile = "^4.2"
docker = "^7.1.0"

[tool.poetry.group.dev.dependencies]
httpx = "^0.27.0"
pytest = "^9.0.3"
pytest-asyncio = "^1.3.0"
hypothesis = "^6.152.7"
pytest-benchmark = "^5.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
